<resources>
    <string name="app_name">User Info</string>
    <string name="username">Enter your Username</string>
    <string name="phone_number">Enter your Phone number</string>
    <string name="email">Enter your Email</string>
    <string name="pincode">Enter your area Pincode</string>
    <string name="address">Enter your area Address</string>
    <string name="validate">Validate</string>
    <string name="update_your_profile">Update your Profile</string>
    <string name="usernameTV">Username:</string>
    <string name="emailTV">Email:</string>
    <string name="phone_numberTV">Phone Number:</string>
    <string name="pincodeTV">Pincode:</string>
    <string name="addressTV">Address:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="email_toast_message">Email is not valid</string>
    <string name="phone_number_toast_message">Phone number should not be less than 10</string>
    <string name="pincode_toast_message">Pincode should not be less than 6</string>
    <string name="field_is_required"> field is required</string>
    <string name="resultText">"Hi %1$s, How are you? Are you staying at %2$s-%3$s. I am not able to contact you on %4$s. Can I email you the details at %5$s"</string>
    <string name="update_header_text">Update your details</string>
    <string name="details_header_text">Your Details!</string>
    <string name="username_toast_message">Username is not valid.</string>
</resources>